chnages to name

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Hello World</h1>
     <a href="contact.html">Contact</a>
-    <a href="about-us.html">Contact</a>
-    <a href="menu.html">Contact</a>
+    <a href="about-us.html">About us</a>
+    <a href="menu.html">Menu</a>
     
 </body>
 </html>
