store new paragraph

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="contact.html">Contact</a>
     <a href="about-us.html">About us</a>
     <a href="menu.html">Menu</a>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis ipsum quaerat recusandae porro possimus consequuntur repudiandae ex, totam enim, ad saepe et minus tempora eveniet beatae error sequi! Debitis, iure.</p>
     
 </body>
 </html>
